--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: cpp
 sudo: required
 dist: trusty
 
+git:
+  depth: 1
+
 addons:
   apt:
     packages:
@@ -29,3 +32,19 @@ matrix:
     - env: BUILD_TARGET="posix-check" VERBOSE=1
       compiler: gcc
       os: linux
+    - env: BUILD_TARGET="scan-build"
+      os: linux
+      compiler: clang
+      addons:
+        apt:
+          packages:
+          - libdbus-1-dev
+          - autoconf-archive
+          - doxygen
+          - ctags
+          - libboost-dev
+          - libboost-filesystem-dev
+          - libboost-system-dev
+          - libavahi-core-dev
+          - expect
+          - clang
