--- a/configure.ac
+++ b/configure.ac
@@ -435,6 +435,7 @@ third_party/libcoap/Makefile
 third_party/mbedtls/Makefile
 third_party/wpantund/Makefile
 third_party/mdl/Makefile
+third_party/openthread/Makefile
 third_party/angular/Makefile
 third_party/angular-material/Makefile
 include/Makefile
