--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/openthread/repo"]
 	path = third_party/openthread/repo
 	url = https://github.com/openthread/openthread.git
+[submodule "third_party/openweave/repo"]
+	path = third_party/openweave/repo
+	url = https://github.com/openweave/openweave-core.git
