[openwrt] fix building on OpenWRT
* Use **openthread-br** as the package name instead of openthread.
* Added a OpenWRT Makefile and README at `etc/openwrt` to guide
  development for OpenWRT.
* Added --enable-dbus-server to allow build without dbus support.
* Updated OpenThread to support detect big endian automatically.
* Added openwrt-check in travis-ci.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ after_success:
 
 matrix:
   include:
+    - env: BUILD_TARGET="openwrt-check" VERBOSE=1
+      os: linux
+      dist: bionic
     - env: BUILD_TARGET="raspbian-gcc" VERBOSE=1 IMAGE_NAME=2017-04-10-raspbian-jessie-lite IMAGE_URL=http://director.downloads.raspberrypi.org/raspbian_lite/images/raspbian_lite-2017-04-10/2017-04-10-raspbian-jessie-lite.zip
       os: linux
       dist: bionic
