--- a/src/web/CMakeLists.txt
+++ b/src/web/CMakeLists.txt
@@ -56,8 +56,12 @@ install(
     DESTINATION sbin
 )
 
+add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/angular ${CMAKE_CURRENT_BINARY_DIR}/angular)
+add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/angular-material ${CMAKE_CURRENT_BINARY_DIR}/angular-material)
+add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/mdl ${CMAKE_CURRENT_BINARY_DIR}/mdl)
+
 install(DIRECTORY web-service/frontend
-    DESTINATION ${OTBR_WEB_DATADIR}/frontend
+    DESTINATION ${OTBR_WEB_DATADIR}
 )
 
 if(OTBR_SYSTEMD_UNIT_DIR)
