--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,6 +96,8 @@ jobs:
       run: tests/scripts/bootstrap.sh
     - name: Run
       run: script/test build check
+    - name: Codecov
+      uses: codecov/codecov-action@v1
 
   script-check:
     runs-on: ubuntu-18.04
@@ -109,6 +111,8 @@ jobs:
       run: tests/scripts/bootstrap.sh
     - name: Run
       run: tests/scripts/check-scripts
+    - name: Codecov
+      uses: codecov/codecov-action@v1
 
   scan-build:
     runs-on: ubuntu-18.04
