--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -69,6 +69,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Bootstrap
+      run: |
+        ./script/git-tool update third_party/openthread/repo
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
       with:
